fix math-p css to have word wrapping and a bit more padding

--- a/html_math.css
+++ b/html_math.css
@@ -1,10 +1,13 @@
 
 div.math-p {
-    display: inline-flex;
     align-items: center;
-    white-space: pre;
-    padding-top: 0.2em;
-    padding-bottom: 0.2em;
+    /* https://stackoverflow.com/a/248013 */
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
     width: 100%;
 }
 
